# tropicall.ai.models

LLM/qwen3-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
LLM/qwen3-service/clients/: __init__.py  python_client.py
LLM/qwen3-service/clients/livekit_plugin/: __init__.py  qwen3_llm.py
LLM/qwen3-service/deploy/runpod/: template.json
LLM/qwen3-service/src/: __init__.py  config.py  main.py
LLM/qwen3-service/src/api/: __init__.py  health.py  metrics.py  openai_compat.py  websocket.py
LLM/qwen3-service/src/core/: __init__.py  session.py  token_streamer.py
LLM/qwen3-service/src/inference/: __init__.py  request_handler.py  vllm_engine.py
LLM/qwen3-service/src/observability/: __init__.py  logging.py  metrics.py
LLM/qwen3-service/src/protocol/: __init__.py  errors.py  messages.py
LLM/qwen3-service/tests/: conftest.py  test_openai_api.py  test_websocket.py
STT/whisper-service/: Dockerfile  README.md  docker-compose.yml  livekit_load_test.py  pyproject.toml  requirements.txt  test_full_audio.py  test_runpod.py  test_transcribe.py
STT/whisper-service/clients/: __init__.py  python_client.py
STT/whisper-service/clients/livekit_plugin/: __init__.py  whisper_stt.py
STT/whisper-service/deploy/runpod/: template.json
STT/whisper-service/src/: __init__.py  config.py  main.py
STT/whisper-service/src/api/: __init__.py  health.py  metrics.py  websocket.py
STT/whisper-service/src/core/: __init__.py  audio_buffer.py  session.py  utterance.py  vad.py
STT/whisper-service/src/inference/: __init__.py  inference_queue.py  whisper_worker.py
STT/whisper-service/src/observability/: __init__.py  logging.py  metrics.py
STT/whisper-service/src/protocol/: __init__.py  errors.py  messages.py
TTS/kokoro-service/: Dockerfile  README.md  docker-compose.yml  livekit_load_test.py  load_test.py  pyproject.toml  requirements.txt  test_runpod.py
TTS/kokoro-service/clients/: example_agent.py  python_client.py
TTS/kokoro-service/clients/livekit_plugin/: __init__.py  kokoro_tts.py
TTS/kokoro-service/deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
TTS/kokoro-service/deploy/runpod/: template.json
TTS/kokoro-service/src/: __init__.py  config.py  main.py
TTS/kokoro-service/src/api/: health.py  metrics.py  websocket.py
TTS/kokoro-service/src/core/: __init__.py  audio_streamer.py  normalizer.py  session.py
TTS/kokoro-service/src/inference/: __init__.py  inference_queue.py  kokoro_worker.py
TTS/kokoro-service/src/observability/: metrics.py
TTS/kokoro-service/src/protocol/: errors.py  messages.py
TTS/kokoro-service/tests/: load_test_async.py  test_inference_queue.py  test_text_accumulator.py
TTS/supertonic-service/: Dockerfile  README.md  docker-compose.yml  livekit_load_test.py  pyproject.toml  requirements.txt  test_runpod.py
TTS/supertonic-service/clients/: __init__.py  example_agent.py  python_client.py
TTS/supertonic-service/clients/livekit_plugin/: __init__.py  supertonic_tts.py
TTS/supertonic-service/deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
TTS/supertonic-service/deploy/runpod/: template.json
TTS/supertonic-service/src/: config.py  main.py
TTS/supertonic-service/src/api/: __init__.py  health.py
TTS/supertonic-service/src/core/: audio_streamer.py  session.py  text_accumulator.py
TTS/supertonic-service/src/inference/: inference_queue.py  supertonic_worker.py
TTS/supertonic-service/src/observability/: __init__.py  logging.py  metrics.py
TTS/supertonic-service/src/protocol/: __init__.py  messages.py
TTS/supertonic-service/tests/: __init__.py  conftest.py  test_normalizer.py  test_websocket.py
