[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kokoro-tts-service"
version = "0.1.0"
description = "Real-time TTS microservice with Kokoro-82M for pt-BR, optimized for LiveKit agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
authors = [
    {name = "Tropicall AI", email = "dev@tropicall.ai"}
]
keywords = ["tts", "kokoro", "livekit", "realtime", "portuguese", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Kokoro TTS - IMPORTANTE: usar versao 0.9.x (nao 0.3.x)
    "kokoro>=0.9.4,<1.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "huggingface-hub>=0.20.0",
    # Audio processing
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    # Observability
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    # Health checks
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
kokoro-tts = "src.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "clients*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
